[package]
name = "blockchain-simulator"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2018"

[dependencies]
log = { version="0.4" }
bincode = { version="^1" }
futures = { version="0.3" }
serde = { version="^1", features=["derive"] }
rand = { version="0.7" }
digest = { version="0.8" }
rsa = { version="0.2", features=["serde1"] } #change to "serde" once RSA is updated
bytes = { version="1", features=["serde"] }
sha2 = { version="0.8" }
chrono = { version="0.4" }
tokio = { version="1", features=["net", "sync", "io-util", "time", "rt-multi-thread"], optional=true }
tokio-util = { version="0.6", features=["codec"], optional=true }
futures-util = { version="0.3", optional=true }
clap = { version="^2", default-features=false, features=[ "suggestions" ], optional=true }

[lib]
name = "blockchain_simulator"
path = "src/lib.rs"

[[bin]]
name = "blockchain-sim-test-client"
path = "src/bin/test_client.rs"
required-features = ["tokio", "futures-util"]

[[bin]]
name = "blockchain-sim-test-server"
path = "src/bin/test_server.rs"
required-features = ["tokio", "server"]

[features]
server = ["clap", "tokio", "tokio-util"]
