[package]
name = "blockchain-simulator"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.cornell.edu>"]
edition = "2021"

[dependencies]
log = { version="0.4" }
bincode = { version="^1" }
futures = { version="0.3" }
serde = { version="^1", features=["derive"] }
rand = { version="0.8", features=["getrandom"] }
digest = { version="0.8" }
rsa = { git="https://github.com/RustCrypto/RSA.git", features=["serde"] }
#rsa =  { version="0.3", features=["serde"] }
bytes = { version="1", features=["serde"] }
sha2 = { version="0.8" }
chrono = { version="0.4" }
tokio = { version="1", features=["net", "sync", "io-util", "time", "rt-multi-thread"], optional=true }
tokio-util = { version="0.6", features=["codec"], optional=true }
futures-util = { version="0.3", optional=true }
clap = { version="3", default-features=false, features=["std", "suggestions" ], optional=true }

[lib]
name = "blockchain_simulator"
path = "src/lib.rs"

[[bin]]
name = "blockchain-sim-test-client"
path = "src/bin/test_client.rs"
required-features = ["tokio", "futures-util"]

[[bin]]
name = "blockchain-sim-test-server"
path = "src/bin/test_server.rs"
required-features = ["tokio", "server"]

[features]
server = ["clap", "tokio", "tokio-util"]
